k8s/04-db-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: product-app
spec:
  serviceName: "postgres-db"
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:16-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            # persistent data directory — survives pods  restart
            - name: postgres-data
              mountPath: /var/lib/postgresql/data

            - name: init-sql
              mountPath: /docker-entrypoint-initdb.d
          readinessProbe:
            exec:
              command: ["pg_isready", "-U", "appuser", "-d", "products-db"]
            initialDelaySeconds: 30
            periodSeconds: 5
          livenessProbe:
            exec:
              command: ["pg_isready", "-U", "appuser", "-d", "products-db"]
            initialDelaySeconds: 30
            periodSeconds: 10
      volumes:
        - name: init-sql
          configMap:
            name: db-init-sql

  volumeClaimTemplates:
    - metadata:
        name: postgres-data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: gp3
        resources:
          requests:
            storage: 5Gi
