k8s/05-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-db
  namespace: product-app
spec:
  type: ClusterIP
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
