k8s/07-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-api-service
  namespace: product-app
spec:
  type: ClusterIP
  selector:
    app: product-api
  ports:
    - port: 80
      targetPort: 8080
